[package]
name = "cindy-next-rust"
version = "1.2.4"
authors = ["heyrict <xiezh0831@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
log = "^0.4"
env_logger = "^0.7"
regex = "1"

async-graphql = { version = "^3.0.38", features = ["chrono", "uuid", "unblock"]}
async-graphql-actix-web = "^3.0.38"
actix-web = "^4.0"
actix-cors = "^0.6"
actix-rt = "^2.7"
#actix-web-actors = "4.0.0-beta.4"
anyhow = "^1.0"

ring = "^0.16"
rand = "^0.7"
base64 = "^0.12"
uuid = { version = "^0.8", features = ["serde"] }
frank_jwt = "^3.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
#bitflags = "^1.2"

tokio = { version = "^1.17", features = ["time", "sync", "rt", "fs"] }
tokio-stream = { version = "^0.1.8", features = ["sync"] }
tokio-util = { version = "^0.7.1", features = ["compat"] }
chrono = "^0.4"
futures = "^0.3.21"
diesel = { version = "^2.0.0-rc.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
#diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master", features = ["postgres", "r2d2", "chrono", "uuid"] }
lazy_static = "^1.4"
